Modem DBus interface unusable if SIM card not inserted
Problem:
$ ./cli/mmcli -L
/org/freedesktop/ModemManager1/Modem/0 [Sierra Wireless, Incorporated] MC7455
$ ./cli/mmcli -d -m 0
error: couldn't disable the modem: 'GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: Method Enable is not implemented on interface org.freedesktop.ModemManager1.Modem'
Looking at the code, I worked out that the interface was not being constructed as the SIM card was not inserted correctly. I would have been much better to connect up the interface, and return something like org.freedesktop.ModemManager1.Modem.SimCardNotInserted
-- although for something like Enable()
I don't think the missing SIM card should have affected my ability to power down the modem...
In mm-iface-modem.c:4988
the problem is treated as fatal, and Handle method invocations
never gets run.